syntax = "proto3";

package j5.plugin.v1;

option go_package = "github.com/pentops/j5/gen/j5/plugin/v1/plugin_j5pb";

message CodeGenerationRequest {}

message CodeGenerationResponse {
  repeated File files = 1;
}

message File {
  string name = 1;
  string content = 2;
}
